--- a/music-service/src/main/resources/application.yaml
+++ b/music-service/src/main/resources/application.yaml
@@ -12,6 +12,20 @@ springdoc:
     enabled: true
     path: /swagger-ui.html
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  endpoint:
+    health:
+      show-details: always
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+
+
 server:
   port: 8084
 
