--- a/subscriber-service/src/main/resources/application.yaml
+++ b/subscriber-service/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
+        include: health,info,prometheus
   endpoint:
     health:
       show-details: always
@@ -19,7 +19,6 @@ management:
     metrics:
       export:
         enabled: true
-
 
 server:
   port: 8083
