--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -12,3 +12,13 @@ scrape_configs:
     static_configs:
       - targets: [ 'host.docker.internal:8084' ]
     metrics_path: /actuator/prometheus
+
+  - job_name: 'subscriber-service'
+    static_configs:
+      - targets: [ 'host.docker.internal:8083' ]
+    metrics_path: /actuator/prometheus
+
+  - job_name: 'auth-service'
+    static_configs:
+      - targets: [ 'host.docker.internal:8082' ]
+    metrics_path: /actuator/prometheus
